// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout Block should render correctly 1`] = `
<div
  className="css-112btbk "
  onClick={null}
  style={Object {}}
/>
`;

exports[`components/layout Box should allow overriding of default styles 1`] = `
<Box
  className="css-bgs7uy "
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`components/layout Box should allow passing vector style values 1`] = `
<Box
  className="css-nwaj4v "
  style={Object {}}
/>
`;

exports[`components/layout Box should render correctly 1`] = `
<Box
  className="css-1rvl9tz "
  onClick={null}
  style={Object {}}
/>
`;

exports[`components/layout Flex should render correctly 1`] = `
<Flex
  className="css-1w63obm "
  onClick={null}
  style={Object {}}
/>
`;

exports[`components/layout Inline should render correctly 1`] = `
<span
  className="css-12h0jff "
  onClick={null}
  style={Object {}}
/>
`;

exports[`components/layout InlineFlex should render correctly 1`] = `
<span
  className="css-pkanpr "
  onClick={null}
  style={Object {}}
/>
`;
